[project]
name = "python-with-capytaine"
version = "v2.0"
description = "A standalone distribution of Capytaine with a Python interpreter"
authors = [
    {name = "Matthieu Ancellin", email = "matthieu.ancellin@eurobios.com"},
]
dependencies = [
    "capytaine>=2.0",
    "matplotlib>=3.8.0",
    "vtk>=9.2.6",
    "joblib>=1.3.2",
    "pyinstaller>=4.10",
    "ipython>=8.15.0",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "GPL"}


[tool.pdm.scripts]
bundle = "pyinstaller --clean --noconfirm ipython-with-capytaine.spec"
